Add a sketch of a bot that executes basic commands