@@ -6,6 +6,10 @@ plugins {
     alias(libs.plugins.ktlint)
 }
 
+tasks.test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+
 dependencies {
     implementation(platform(libs.spring.boot.bom))
     testImplementation(platform(libs.spring.boot.bom))
@@ -13,5 +17,8 @@ dependencies {
     implementation(libs.jackson.module.kotlin)
     implementation(libs.kotlin.logging)
     testImplementation(libs.bundles.spring.boot.test)
+    testImplementation(libs.mockk)
+    testImplementation(libs.wiremock)
+    testImplementation(libs.datafaker)
     testRuntimeOnly(libs.junit.platform.launcher)
 }
